chore(composer): Minimum version of PHP is 8.0.  Require phpunit 9.6.x

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": "^8.0",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
@@ -39,7 +39,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6.0",
-        "phpunit/phpunit": "^4.0"
+        "phpunit/phpunit": "^9.6"
     },
     "provide": {
         "psr/http-message-implementation": "1.0"
