--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6.0",
+        "phpspec/prophecy": "^1.19",
         "phpunit/phpunit": "^9.6"
     },
     "provide": {
