--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.0, 8.1, 8.2, 8.3]
+                php: [8.0, 8.1, 8.2, 8.3, 8.4]
                 experimental: [false]
                 include:
                     - php: 8.0
@@ -20,6 +20,8 @@ jobs:
                     - php: 8.2
                       experimental: true
                     - php: 8.3
+                      experimental: true
+                    - php: 8.4
                       experimental: true
 
         steps:
