--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,10 @@
         "psr/container": "^1.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.6.0",
+        "squizlabs/php_codesniffer": "^3.10",
         "phpspec/prophecy": "^1.19",
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.6",
+        "phpspec/prophecy-phpunit": "^2.2"
     },
     "provide": {
         "psr/http-message-implementation": "1.0"
