--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.4, 8.0, 8.1, 8.2, 8.3]
+        php: [7.4, 8.0, 8.1, 8.2, 8.3, 8.4]
         experimental: [false]
         include:
           - php: 8.2
@@ -27,7 +27,12 @@ jobs:
           coverage: xdebug
 
       - name: Install dependencies with Composer
-        uses: ramsey/composer-install@v3
+        if: matrix.php < '8.4'
+        run: composer update --prefer-dist --no-progress --no-interaction --ansi
+
+      - name: Install dependencies with Composer
+        if: matrix.php >= '8.4'
+        run: composer update --prefer-dist --no-progress --no-interaction --ansi --ignore-platform-reqs
 
       - name: Coding standards
         if: matrix.analysis
