--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "wiki": "https://github.com/slimphp/Slim/wiki"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "~7.4.0 || ~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-json": "*",
         "nikic/fast-route": "^1.3",
         "psr/container": "^1.0 || ^2.0",
@@ -69,7 +69,7 @@
         "slim/http": "^1.3",
         "slim/psr7": "^1.6",
         "squizlabs/php_codesniffer": "^3.10",
-        "vimeo/psalm": "^5.24"
+        "vimeo/psalm": "^5.26.1"
     },
     "autoload": {
         "psr-4": {
