--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,16 +10,14 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.0, 8.1, 8.2, 8.3]
+                php: [8.2, 8.3]
                 experimental: [false]
                 include:
-                    - php: 8.0
-                      analysis: true
-                    - php: 8.1
-                      experimental: true
                     - php: 8.2
-                      experimental: true
+                      analysis: true
                     - php: 8.3
+                      experimental: true
+                    - php: 8.4
                       experimental: true
 
         steps:
